tests/negative/symbols/misspelled.orng
fn main() -> Int {
    let var = 4
    let bar = 5
    let gar = 5
    car
}